--- a/SouP/src/main/resources/templates/index.html
+++ b/SouP/src/main/resources/templates/index.html
@@ -7,7 +7,7 @@
     <script th:inline="javascript">
         var resultMsg = [[${msg}]];
             if (resultMsg != null) {
-                //만약 resultMsg가 있다면 alert
+
                 alert(resultMsg);
             }
     </script>
@@ -19,6 +19,30 @@
             <div id="content">
                 <div th:replace="/fragments/nav.html :: fragment-nav"></div>
                 <div class="container-fluid">
+                    <span id="user" th:if="${userName}==null">
+                        <div id="logindiv" class="modalWrapOpen">
+                            <div class="loginModal">
+                                <p class="modalTit"><strong>로그인</strong></p>
+                                <button onclick ="loginDivNone()" class="closeBtn"><img id="closeicon" class="close-icon" src="/img/x.png" alt="close"></button>
+                                <button class="loginBtn naver" onclick="location.href='/oauth2/authorization/naver'">네이버 아이디로 로그인</button>
+                                <button class="loginBtn kakao" onclick="location.href='/oauth2/authorization/kakao'">카카오 계정으로 로그인</button>
+                                <button class="loginBtn facebook" onclick="location.href='/oauth2/authorization/facebook'">페이스북 계정으로 로그인</button>
+                                <button class="loginBtn google" onclick="location.href='/oauth2/authorization/google'">구글 계정으로 로그인</button>
+                                <a onclick="registerDivBlock(),loginDivNone()" id="registeraction" class="signupBtn">회원 가입하기</a>
+                            </div>
+                        </div>
+                        <div id="registerdiv" class="modalWrapOpen">
+                            <div class="loginModal">
+                                <p class="modalTit"><strong>회원가입</strong></p>
+                                <button onclick ="registerDivNone()" class="closeBtn"><img id="closeicon2"class="close-icon" src="/img/x.png" alt="close"></button>
+                                <button class="loginBtn naver" onclick="location.href='/oauth2/authorization/naver'">네이버 아이디로 로그인</button>
+                                <button class="loginBtn kakao" onclick="location.href='/oauth2/authorization/kakao'">카카오 계정으로 로그인</button>
+                                <button class="loginBtn facebook" onclick="location.href='/oauth2/authorization/facebook'">페이스북 계정으로 로그인</button>
+                                <button class="loginBtn google" onclick="location.href='/oauth2/authorization/google'">구글 계정으로 로그인</button>
+                                <a onclick="loginDivBlock(),registerDivNone()" id="loginaction" class="signupBtn">로그인 하기</a>
+                            </div>
+                        </div>
+                    </span>
                     <div class="d-sm-flex justify-content-between align-items-center mb-4">
                         <h3 class="text-dark mb-0">새로운 프로젝트/스터디</h3><a class="btn btn-primary btn-sm d-none d-sm-inline-block" role="button" href="/buildProject"></i>&nbsp;프로젝트 생성하기</a>
                     </div>
@@ -146,6 +170,7 @@
     <script src="js/chart.min.js"></script>
     <script src="js/bs-init.js"></script>
     <script src="js/theme.js"></script>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
