--- a/SouP/src/main/resources/templates/index.html
+++ b/SouP/src/main/resources/templates/index.html
@@ -1,176 +1,32 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-
+<html>
 <head>
-    <title>SouP | 메인</title>
-    <div th:replace="/fragments/header.html :: fragment-header"></div>
-    <script th:inline="javascript">
-        var resultMsg = [[${msg}]];
-            if (resultMsg != null) {
-
-                alert(resultMsg);
-            }
-    </script>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Test</title>
 </head>
 <body id="page-top">
-    <div id="wrapper">
-        <div th:replace="/fragments/aside.html :: fragment-aside"></div>
-        <div class="d-flex flex-column" id="content-wrapper">
-            <div id="content">
-                <div th:replace="/fragments/nav.html :: fragment-nav"></div>
-                <div class="container-fluid">
-                    <span id="user" th:if="${userName}==null">
-                        <div id="logindiv" class="modalWrapOpen">
-                            <div class="loginModal">
-                                <p class="modalTit"><strong>로그인</strong></p>
-                                <button onclick ="loginDivNone()" class="closeBtn"><img id="closeicon" class="close-icon" src="/img/x.png" alt="close"></button>
-                                <button class="loginBtn naver" onclick="location.href='/oauth2/authorization/naver'">네이버 아이디로 로그인</button>
-                                <button class="loginBtn kakao" onclick="location.href='/oauth2/authorization/kakao'">카카오 계정으로 로그인</button>
-                                <button class="loginBtn facebook" onclick="location.href='/oauth2/authorization/facebook'">페이스북 계정으로 로그인</button>
-                                <button class="loginBtn google" onclick="location.href='/oauth2/authorization/google'">구글 계정으로 로그인</button>
-                                <a onclick="registerDivBlock(),loginDivNone()" id="registeraction" class="signupBtn">회원 가입하기</a>
-                            </div>
-                        </div>
-                        <div id="registerdiv" class="modalWrapOpen">
-                            <div class="loginModal">
-                                <p class="modalTit"><strong>회원가입</strong></p>
-                                <button onclick ="registerDivNone()" class="closeBtn"><img id="closeicon2"class="close-icon" src="/img/x.png" alt="close"></button>
-                                <button class="loginBtn naver" onclick="location.href='/oauth2/authorization/naver'">네이버 아이디로 로그인</button>
-                                <button class="loginBtn kakao" onclick="location.href='/oauth2/authorization/kakao'">카카오 계정으로 로그인</button>
-                                <button class="loginBtn facebook" onclick="location.href='/oauth2/authorization/facebook'">페이스북 계정으로 로그인</button>
-                                <button class="loginBtn google" onclick="location.href='/oauth2/authorization/google'">구글 계정으로 로그인</button>
-                                <a onclick="loginDivBlock(),registerDivNone()" id="loginaction" class="signupBtn">로그인 하기</a>
-                            </div>
-                        </div>
-                    </span>
-                    <div class="d-sm-flex justify-content-between align-items-center mb-4">
-                        <h3 class="text-dark mb-0">새로운 프로젝트/스터디</h3><a class="btn btn-primary btn-sm d-none d-sm-inline-block" role="button" href="/buildProject"></i>&nbsp;프로젝트 생성하기</a>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-6 col-xl-3 mb-4">
-                            <div class="card shadow border-start-primary py-2">
-                                <div class="card-body">
-                                    <div class="row align-items-center no-gutters">
-                                        <div class="col me-2">
-                                            <div class="text-uppercase text-primary fw-bold text-xs mb-1"><span>카테고리</span></div>
-                                            <div class="text-dark fw-bold h5 mb-0"><span>프로젝트 제목</span></div>
-                                            <div class="col-auto"><i class="fas fa-thin fa-heart text-gray-700"><span style="padding-left: 0.5rem;">1</span></i></div>
-                                        </div>
-                                            <div class="col-auto"><i class="fas fa-thin fa-file fa-2x text-gray-300"></i></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6 col-xl-3 mb-4">
-                            <div class="card shadow border-start-primary py-2">
-                                <div class="card-body">
-                                    <div class="row align-items-center no-gutters">
-                                        <div class="col me-2">
-                                            <div class="text-uppercase text-primary fw-bold text-xs mb-1"><span>카테고리</span></div>
-                                            <div class="text-dark fw-bold h5 mb-0"><span>프로젝트 제목</span></div>
-                                            <div class="col-auto"><i class="fas fa-thin fa-heart text-gray-700"><span style="padding-left: 0.5rem;">1</span></i></div>
-                                        </div>
-                                            <div class="col-auto"><i class="fas fa-thin fa-file fa-2x text-gray-300"></i></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6 col-xl-3 mb-4">
-                            <div class="card shadow border-start-primary py-2">
-                                <div class="card-body">
-                                    <div class="row align-items-center no-gutters">
-                                        <div class="col me-2">
-                                            <div class="text-uppercase text-primary fw-bold text-xs mb-1"><span>카테고리</span></div>
-                                            <div class="text-dark fw-bold h5 mb-0"><span>프로젝트 제목</span></div>
-                                            <div class="col-auto"><i class="fas fa-thin fa-heart text-gray-700"><span style="padding-left: 0.5rem;">1</span></i></div>
-                                        </div>
-                                            <div class="col-auto"><i class="fas fa-thin fa-file fa-2x text-gray-300"></i></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6 col-xl-3 mb-4">
-                            <div class="card shadow border-start-primary py-2">
-                                <div class="card-body">
-                                    <div class="row align-items-center no-gutters">
-                                        <div class="col me-2">
-                                            <div class="text-uppercase text-primary fw-bold text-xs mb-1"><span>카테고리</span></div>
-                                            <div class="text-dark fw-bold h5 mb-0"><span>프로젝트 제목</span></div>
-                                            <div class="col-auto"><i class="fas fa-thin fa-heart text-gray-700"><span style="padding-left: 0.5rem;">1</span></i></div>
-                                        </div>
-                                            <div class="col-auto"><i class="fas fa-thin fa-file fa-2x text-gray-300"></i></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="d-sm-flex justify-content-between align-items-center mb-4">
-                            <h3 class="text-dark mb-0">핫한 스토리</h3><a class="btn btn-primary btn-sm d-none d-sm-inline-block" role="button" href="#"></i>&nbsp;게시판 글 생성하기</a>
-                        </div>
-                        <div class="col-md-6 col-xl-3 mb-4">
-                            <div class="card shadow border-start-primary py-2">
-                                <div class="card-body">
-                                    <div class="row align-items-center no-gutters">
-                                        <div class="col me-2">
-                                            <div class="text-uppercase text-primary fw-bold text-xs mb-1"><span>작성자</span></div>
-                                            <div class="text-dark fw-bold h5 mb-0"><span>게시판글 제목</span></div>
-                                        </div>
-                                        <div class="col-auto"><i class="fas fa-calendar fa-2x text-gray-300"></i></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6 col-xl-3 mb-4">
-                            <div class="card shadow border-start-primary py-2">
-                                <div class="card-body">
-                                    <div class="row align-items-center no-gutters">
-                                        <div class="col me-2">
-                                            <div class="text-uppercase text-primary fw-bold text-xs mb-1"><span>카테고리</span></div>
-                                            <div class="text-dark fw-bold h5 mb-0"><span>프로젝트 제목</span></div>
-                                        </div>
-                                        <div class="col-auto"><i class="fas fa-calendar fa-2x text-gray-300"></i></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6 col-xl-3 mb-4">
-                            <div class="card shadow border-start-primary py-2">
-                                <div class="card-body">
-                                    <div class="row align-items-center no-gutters">
-                                        <div class="col me-2">
-                                            <div class="text-uppercase text-primary fw-bold text-xs mb-1"><span>카테고리</span></div>
-                                            <div class="text-dark fw-bold h5 mb-0"><span>프로젝트 제목</span></div>
-                                        </div>
-                                        <div class="col-auto"><i class="fas fa-calendar fa-2x text-gray-300"></i></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6 col-xl-3 mb-4">
-                            <div class="card shadow border-start-primary py-2">
-                                <div class="card-body">
-                                    <div class="row align-items-center no-gutters">
-                                        <div class="col me-2">
-                                            <div class="text-uppercase text-primary fw-bold text-xs mb-1"><span>카테고리</span></div>
-                                            <div class="text-dark fw-bold h5 mb-0"><span>프로젝트 제목</span></div>
-                                        </div>
-                                        <div class="col-auto"><i class="fas fa-calendar fa-2x text-gray-300"></i></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div th:replace="/fragments/footer.html :: fragment-footer"></div>
-                    </div>
-                </div>
-            </div>
+<div id="wrapper">
+    <div id="logindiv" class="modalWrapOpen">
+        <div class="loginModal">
+            <p class="modalTit"><strong>로그인</strong></p>
+            <button class="loginBtn naver" onclick="location.href='/oauth2/authorization/naver'">네이버 아이디로 로그인</button>
+            <button class="loginBtn kakao" onclick="location.href='/oauth2/authorization/kakao'">카카오 계정으로 로그인</button>
+            <button class="loginBtn facebook" onclick="location.href='/oauth2/authorization/facebook'">페이스북 계정으로 로그인</button>
+            <button class="loginBtn google" onclick="location.href='/oauth2/authorization/google'">구글 계정으로 로그인</button>
         </div>
     </div>
-
-    <script src="bootstrap/js/bootstrap.min.js"></script>
-    <script src="js/chart.min.js"></script>
-    <script src="js/bs-init.js"></script>
-    <script src="js/theme.js"></script>
-    <script src="js/index.js"></script>
+    <div id="registerdiv" class="modalWrapOpen">
+        <div class="loginModal">
+            <p class="modalTit"><strong>회원가입</strong></p>
+            <button class="loginBtn naver" onclick="location.href='/oauth2/authorization/naver'">네이버 아이디로 로그인</button>
+            <button class="loginBtn kakao" onclick="location.href='/oauth2/authorization/kakao'">카카오 계정으로 로그인</button>
+            <button class="loginBtn facebook" onclick="location.href='/oauth2/authorization/facebook'">페이스북 계정으로 로그인</button>
+            <button class="loginBtn google" onclick="location.href='/oauth2/authorization/google'">구글 계정으로 로그인</button>
+        </div>
+    </div>
+</div>
 </body>
-
 </html>
